@@ -5,7 +5,7 @@ import net.minecraft.util.datafix.fixes.References;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.MobCategory;
 import net.minecraft.world.item.BlockItem;
-import net.minecraft.world.item.CreativeModeTabs;
+import net.minecraft.world.item.CreativeModeTab;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.Blocks;
@@ -15,20 +15,21 @@ import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.entity.BlockEntityType;
 import net.minecraft.world.level.block.entity.BlockEntityType.BlockEntitySupplier;
 import net.minecraft.world.level.block.state.BlockBehaviour;
-import net.minecraft.world.level.material.Material;
-import net.minecraft.world.level.material.MaterialColor;
+import net.minecraft.world.level.material.MapColor;
 import net.minecraftforge.registries.DeferredRegister;
 import net.minecraftforge.registries.ForgeRegistries;
 import net.minecraftforge.registries.RegistryObject;
 import net.smileycorp.atlas.api.block.WoodBlock;
 import net.smileycorp.atlas.api.block.WoodBlockBuilder;
 import net.smileycorp.kinematica.core.common.Constants;
+import net.smileycorp.kinematica.core.common.KineTabs;
 import net.smileycorp.kinematica.core.common.world.block.BauxiteGrassBlock;
 import net.smileycorp.kinematica.core.common.world.block.OreBlockEntity;
 import net.smileycorp.kinematica.core.common.world.block.PeatGrassBlock;
 import net.smileycorp.kinematica.core.common.world.entity.BlueWitherSkeleton;
 
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class KineWorld {
@@ -38,31 +39,31 @@ public class KineWorld {
 	public static DeferredRegister<BlockEntityType<?>> BLOCK_ENTITIES = DeferredRegister.create(ForgeRegistries.BLOCK_ENTITY_TYPES, Constants.MODID);
 	public static DeferredRegister<EntityType<?>> ENTITIES = DeferredRegister.create(ForgeRegistries.ENTITY_TYPES, Constants.MODID);
 
-	public static RegistryObject<Block> BAUXITE_SOIL = registerBlock("bauxite_soil",() ->  new Block(BlockBehaviour.Properties.copy(Blocks.DIRT).color(MaterialColor.COLOR_ORANGE)));
+	public static RegistryObject<Block> BAUXITE_SOIL = registerBlock("bauxite_soil",() ->  new Block(BlockBehaviour.Properties.copy(Blocks.DIRT).mapColor(MapColor.COLOR_ORANGE)));
 	public static RegistryObject<Block> BAUXITE_GRASS = registerBlock("bauxite_grass",() ->  new BauxiteGrassBlock());
-	public static RegistryObject<Block> PEAT = registerBlock("peat",() ->  new MudBlock(BlockBehaviour.Properties.copy(Blocks.DIRT).color(MaterialColor.COLOR_ORANGE)));
+	public static RegistryObject<Block> PEAT = registerBlock("peat",() ->  new MudBlock(BlockBehaviour.Properties.copy(Blocks.DIRT).mapColor(MapColor.COLOR_ORANGE)));
 	public static RegistryObject<Block> PEAT_GRASS = registerBlock("peat_grass", () ->  new PeatGrassBlock());
-	public static RegistryObject<Block> LIMESTONE = registerBlock("limestone", Block.Properties.of(Material.STONE, MaterialColor.SAND)
+	public static RegistryObject<Block> LIMESTONE = registerBlock("limestone", Block.Properties.of().mapColor(MapColor.SAND)
 			.sound(SoundType.STONE).strength(1f, 6f).requiresCorrectToolForDrops());
-	public static RegistryObject<Block> DOLOMITE = registerBlock("dolomite", Block.Properties.of(Material.STONE, MaterialColor.SNOW)
+	public static RegistryObject<Block> DOLOMITE = registerBlock("dolomite", Block.Properties.of().mapColor(MapColor.SNOW)
 			.sound(SoundType.STONE).strength(1f, 6f).requiresCorrectToolForDrops());
 
-	public static RegistryObject<Block> PEGMATITE = registerBlock("pegmatite", Block.Properties.of(Material.STONE, MaterialColor.TERRACOTTA_ORANGE)
+	public static RegistryObject<Block> PEGMATITE = registerBlock("pegmatite", Block.Properties.of().mapColor(MapColor.TERRACOTTA_ORANGE)
 			.sound(SoundType.STONE).strength(1.5f, 9f).requiresCorrectToolForDrops());
-	public static WoodBlock SHARINGA_WOOD = WoodBlockBuilder.of("sharinga", Constants.MODID, CreativeModeTabs.f_256837_, ITEMS, BLOCKS)
-			.barkColour(MaterialColor.TERRACOTTA_BROWN).plankColour(MaterialColor.TERRACOTTA_WHITE).enableBoat().build();
+	public static WoodBlock SHARINGA_WOOD = WoodBlockBuilder.of("sharinga", Constants.MODID, KineTabs.WORLD, ITEMS, BLOCKS)
+			.barkColour(MapColor.TERRACOTTA_BROWN).plankColour(MapColor.TERRACOTTA_WHITE).decorationsTab(KineTabs.CONSTRUCTION).enableBoat().build();
 
 	//ores
-	public static RegistryObject<Block> TIN_ORE = registerBlock("tin_ore", Block.Properties.of(Material.STONE, MaterialColor.STONE)
+	public static RegistryObject<Block> TIN_ORE = registerBlock("tin_ore", Block.Properties.of().mapColor(MapColor.STONE)
 			.sound(SoundType.STONE).strength(1.5f, 9f).requiresCorrectToolForDrops());
-	public static RegistryObject<Block> ZINC_ORE = registerBlock("zinc_ore", Block.Properties.of(Material.STONE, MaterialColor.STONE)
+	public static RegistryObject<Block> ZINC_ORE = registerBlock("zinc_ore", Block.Properties.of().mapColor(MapColor.STONE)
 			.sound(SoundType.STONE).strength(1.5f, 9f).requiresCorrectToolForDrops());
 
-	public static RegistryObject<Block> CINNABAR_ORE = registerBlock("cinnabar_ore", Block.Properties.of(Material.STONE, MaterialColor.STONE)
+	public static RegistryObject<Block> CINNABAR_ORE = registerBlock("cinnabar_ore", Block.Properties.of().mapColor(MapColor.STONE)
 			.sound(SoundType.STONE).strength(1.5f, 9f).requiresCorrectToolForDrops());
-	public static RegistryObject<Block> SULPHUR_ORE = registerBlock("sulphur_ore", Block.Properties.of(Material.STONE, MaterialColor.STONE)
+	public static RegistryObject<Block> SULPHUR_ORE = registerBlock("sulphur_ore", Block.Properties.of().mapColor(MapColor.STONE)
 			.sound(SoundType.STONE).strength(1.5f, 9f).requiresCorrectToolForDrops());
-	public static RegistryObject<Block> ANTHRACITE_ORE = registerBlock("anthracite_ore", Block.Properties.of(Material.STONE, MaterialColor.STONE)
+	public static RegistryObject<Block> ANTHRACITE_ORE = registerBlock("anthracite_ore", Block.Properties.of().mapColor(MapColor.STONE)
 			.sound(SoundType.STONE).strength(1.5f, 9f).requiresCorrectToolForDrops());
 
 	public static RegistryObject<BlockEntityType<OreBlockEntity>> ORE_BLOCK_ENTITY = register("ore_block", (pos, state)-> new OreBlockEntity(pos, state, Blocks.STONE),
@@ -84,7 +85,7 @@ public class KineWorld {
 	@SafeVarargs
 	private static <T extends BlockEntity> RegistryObject<BlockEntityType<T>> register(String name, BlockEntitySupplier<T> supplier, RegistryObject<Block>... blocks) {
 		return BLOCK_ENTITIES.register(name, () ->
-		BlockEntityType.Builder.of(supplier, Stream.of(blocks).map((block)->block.get()).toList().toArray(new Block[] {}))
+		BlockEntityType.Builder.of(supplier, Stream.of(blocks).map((block)->block.get()).collect(Collectors.toList()).toArray(new Block[] {}))
 		.build(Util.fetchChoiceType(References.BLOCK_ENTITY, Constants.locStr(name))));
 	}
 
@@ -92,4 +93,18 @@ public class KineWorld {
 		SHARINGA_WOOD.registerStandardFuelValues();
 	}
 
+    public static void fillWorldTab(CreativeModeTab.ItemDisplayParameters itemDisplayParameters, CreativeModeTab.Output output) {
+		output.accept(BAUXITE_SOIL.get());
+		output.accept(BAUXITE_GRASS.get());
+		output.accept(PEAT.get());
+		output.accept(PEAT_GRASS.get());
+		output.accept(LIMESTONE.get());
+		output.accept(DOLOMITE.get());
+		output.accept(PEGMATITE.get());
+		output.accept(TIN_ORE.get());
+		output.accept(ZINC_ORE.get());
+		output.accept(CINNABAR_ORE.get());
+		output.accept(SULPHUR_ORE.get());
+		output.accept(ANTHRACITE_ORE.get());
+    }
 }
